# html5ever-libxml2-bridge

./: .gitignore  Cargo.toml  README.md  build.rs  test.html
src/: error_container.rs  handle.rs  lib.rs  libxml2.rs  main.rs  parse_result.rs  sink.rs
