[package]
name = "html5stuff"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "html5parser"
crate-type = ["cdylib"]
path = "src/lib.rs"

[features]
debuglogging = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26.0"
libc = "0.2.147"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3.2"

[target.'cfg(macos)'.build-dependencies]
pkg-config = "0.3.2"
